:lipstick: (CSS): fix double scrollbar issue

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -5,7 +5,7 @@ body {
   --lightBg: #f5f5f5;
   --textNormal: #181818;
   --textTitle: #181818;
-  --textLink: #562ae5;
+  --textLink: #fd5e53;
   --hr: hsla(0, 20%, 1%, 0.2);
 
   background-color: var(--bg);
@@ -18,7 +18,7 @@ body.dark {
   --lightBg: #0f0f0f;
   --textNormal: #e0e0e0;
   --textTitle: #fff;
-  --textLink: #b28cf5;
+  --textLink: #ff6363;
   --hr: hsla(0, 0%, 100%, 0.2);
 }
 
@@ -69,35 +69,34 @@ button {
   outline: 0;
 }
 .sidebar {
-  position: fixed;
-  text-align: center;
+  height: 200px;
   width: 100%;
-  min-height: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  text-align: center;
   background-color: var(--lightBg);
-}
-
-.sidebar-content {
-  height: 100%;
 }
 
 .main-content {
   background-color: var(--bg);
   position: absolute;
   top: 200px;
-  z-index: 233;
-  width: 100%;
+  z-index: 10;
   padding: 0 20px 0;
+  margin-left: 0;
 }
 
 @media only screen and (min-width: 768px) {
   .sidebar {
-    position: initial;
+    height: 100vh;
+    width: 380px;
   }
   .main-content {
-    padding: 0 30px 0;
-    height: 100vh;
-    overflow-y: scroll;
-    position: initial;
+    padding: 0 100px 0;
+    margin-left: 380px;
     top: 0;
   }
 }
